feat: Implemented icons to sidebar

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Crie anotações para você expor suas ideias.">
+    <meta name = "robôs" content = "index, nofollow">
+    <meta name="keywords" content="Anotações, praticidade, rapidez, facilidade">
+    <meta name="language" content="Portuguese">
     <title>Annotes</title>
   </head>
   <body>
