feat: Add meta tags seo

--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Crie anotações para você expor suas ideias.">
-    <meta name = "robôs" content = "index, nofollow">
-    <meta name="keywords" content="Anotações, praticidade, rapidez, facilidade">
-    <meta name="language" content="Portuguese">
-    <title>Annotes</title>
+    <meta
+      name="description"
+      content="Registre suas ideias em tempo real. Compartilhe, colabore e mantenha suas notas sempre atualizadas, de forma eficaz e instantânea."
+    />
+    <meta name="author" content="Damaso Magno" />
+    <meta name="robots" content="index, follow" />
+    <meta
+      name="keywords"
+      content="Anotações, Tempo real, Colaborativas, Annotes, Plataforma de anotações, Notas compartilhadas, Colaboração instantânea, Notas em equipe, Ferramenta de anotações, Registro de ideias"
+    />
+    <meta property="og:title" content="Anotações em Tempo Real - Annotes" />
+    <meta
+      property="og:description"
+      content="Registre suas ideias em tempo real.Mantenha suas notas sempre atualizadas, de forma eficaz e instantânea."
+    />
+
+    <meta name="language" content="Portuguese" />
+    <title>Anotações em Tempo Real - Annotes</title>
   </head>
   <body>
     <div id="root"></div>
