style: Select tag fix style

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
 
     <meta name="language" content="Portuguese" />
-    <title>Anotações em Tempo Real - Annotes</title>
+    <title>Annotes - Anotações em Tempo Real</title>
   </head>
   <body>
     <div id="root"></div>
