style: Implemented prettier for best format code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       name="keywords"
       content="Anotações, Tempo real, Colaborativas, Annotes, Plataforma de anotações, Notas compartilhadas, Colaboração instantânea, Notas em equipe, Ferramenta de anotações, Registro de ideias"
     />
-    <meta property="og:title" content="Anotações em Tempo Real - Annotes" />
+    <meta property="og:title" content="Annotes - Anotações em Tempo Real" />
+    <meta property="og:type" content="website" />
     <meta
       property="og:description"
       content="Registre suas ideias em tempo real.Mantenha suas notas sempre atualizadas, de forma eficaz e instantânea."
